@@ -3405,129 +3405,11 @@ name|fieldType
 range|:
 name|fieldTypeList
 control|)
-block|{
-comment|// must inform any sub-components used in the
-comment|// tokenizer chain if they are ResourceLoaderAware
-if|if
-condition|(
-name|fieldType
-operator|.
-name|supportsAnalyzers
-argument_list|()
-condition|)
-block|{
-name|Analyzer
-name|indexAnalyzer
-init|=
-name|fieldType
-operator|.
-name|getIndexAnalyzer
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|indexAnalyzer
-operator|!=
-literal|null
-operator|&&
-name|indexAnalyzer
-operator|instanceof
-name|TokenizerChain
-condition|)
-name|informResourceLoaderAwareObjectsInChain
+name|informResourceLoaderAwareObjectsForFieldType
 argument_list|(
-operator|(
-name|TokenizerChain
-operator|)
-name|indexAnalyzer
+name|fieldType
 argument_list|)
 expr_stmt|;
-name|Analyzer
-name|queryAnalyzer
-init|=
-name|fieldType
-operator|.
-name|getQueryAnalyzer
-argument_list|()
-decl_stmt|;
-comment|// ref comparison is correct here (vs. equals) as they may be the same
-comment|// object in which case, we don't need to inform twice ... however, it's
-comment|// actually safe to call inform multiple times on an object anyway
-if|if
-condition|(
-name|queryAnalyzer
-operator|!=
-literal|null
-operator|&&
-name|queryAnalyzer
-operator|!=
-name|indexAnalyzer
-operator|&&
-name|queryAnalyzer
-operator|instanceof
-name|TokenizerChain
-condition|)
-name|informResourceLoaderAwareObjectsInChain
-argument_list|(
-operator|(
-name|TokenizerChain
-operator|)
-name|queryAnalyzer
-argument_list|)
-expr_stmt|;
-comment|// if fieldType is a TextField, it might have a multi-term analyzer
-if|if
-condition|(
-name|fieldType
-operator|instanceof
-name|TextField
-condition|)
-block|{
-name|TextField
-name|textFieldType
-init|=
-operator|(
-name|TextField
-operator|)
-name|fieldType
-decl_stmt|;
-name|Analyzer
-name|multiTermAnalyzer
-init|=
-name|textFieldType
-operator|.
-name|getMultiTermAnalyzer
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|multiTermAnalyzer
-operator|!=
-literal|null
-operator|&&
-name|multiTermAnalyzer
-operator|!=
-name|indexAnalyzer
-operator|&&
-name|multiTermAnalyzer
-operator|!=
-name|queryAnalyzer
-operator|&&
-name|multiTermAnalyzer
-operator|instanceof
-name|TokenizerChain
-condition|)
-name|informResourceLoaderAwareObjectsInChain
-argument_list|(
-operator|(
-name|TokenizerChain
-operator|)
-name|multiTermAnalyzer
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
 name|newSchema
 operator|.
 name|refreshAnalyzers
@@ -3656,6 +3538,138 @@ block|}
 return|return
 name|newSchema
 return|;
+block|}
+comment|/**    * Informs analyzers used by a fieldType.    */
+DECL|method|informResourceLoaderAwareObjectsForFieldType
+specifier|protected
+name|void
+name|informResourceLoaderAwareObjectsForFieldType
+parameter_list|(
+name|FieldType
+name|fieldType
+parameter_list|)
+block|{
+comment|// must inform any sub-components used in the
+comment|// tokenizer chain if they are ResourceLoaderAware
+if|if
+condition|(
+operator|!
+name|fieldType
+operator|.
+name|supportsAnalyzers
+argument_list|()
+condition|)
+return|return;
+name|Analyzer
+name|indexAnalyzer
+init|=
+name|fieldType
+operator|.
+name|getIndexAnalyzer
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|indexAnalyzer
+operator|!=
+literal|null
+operator|&&
+name|indexAnalyzer
+operator|instanceof
+name|TokenizerChain
+condition|)
+name|informResourceLoaderAwareObjectsInChain
+argument_list|(
+operator|(
+name|TokenizerChain
+operator|)
+name|indexAnalyzer
+argument_list|)
+expr_stmt|;
+name|Analyzer
+name|queryAnalyzer
+init|=
+name|fieldType
+operator|.
+name|getQueryAnalyzer
+argument_list|()
+decl_stmt|;
+comment|// ref comparison is correct here (vs. equals) as they may be the same
+comment|// object in which case, we don't need to inform twice ... however, it's
+comment|// actually safe to call inform multiple times on an object anyway
+if|if
+condition|(
+name|queryAnalyzer
+operator|!=
+literal|null
+operator|&&
+name|queryAnalyzer
+operator|!=
+name|indexAnalyzer
+operator|&&
+name|queryAnalyzer
+operator|instanceof
+name|TokenizerChain
+condition|)
+name|informResourceLoaderAwareObjectsInChain
+argument_list|(
+operator|(
+name|TokenizerChain
+operator|)
+name|queryAnalyzer
+argument_list|)
+expr_stmt|;
+comment|// if fieldType is a TextField, it might have a multi-term analyzer
+if|if
+condition|(
+name|fieldType
+operator|instanceof
+name|TextField
+condition|)
+block|{
+name|TextField
+name|textFieldType
+init|=
+operator|(
+name|TextField
+operator|)
+name|fieldType
+decl_stmt|;
+name|Analyzer
+name|multiTermAnalyzer
+init|=
+name|textFieldType
+operator|.
+name|getMultiTermAnalyzer
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|multiTermAnalyzer
+operator|!=
+literal|null
+operator|&&
+name|multiTermAnalyzer
+operator|!=
+name|indexAnalyzer
+operator|&&
+name|multiTermAnalyzer
+operator|!=
+name|queryAnalyzer
+operator|&&
+name|multiTermAnalyzer
+operator|instanceof
+name|TokenizerChain
+condition|)
+name|informResourceLoaderAwareObjectsInChain
+argument_list|(
+operator|(
+name|TokenizerChain
+operator|)
+name|multiTermAnalyzer
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -4616,6 +4630,24 @@ name|newSchema
 argument_list|)
 expr_stmt|;
 block|}
+comment|// notify analyzers and other objects for our fieldTypes
+for|for
+control|(
+name|FieldType
+name|fieldType
+range|:
+name|newSchema
+operator|.
+name|fieldTypes
+operator|.
+name|values
+argument_list|()
+control|)
+name|informResourceLoaderAwareObjectsForFieldType
+argument_list|(
+name|fieldType
+argument_list|)
+expr_stmt|;
 name|newSchema
 operator|.
 name|refreshAnalyzers
